UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_Terms_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>DRL_Customer_PV_SDEA_Language_Agreement__c</fullName>
        <label>DRL or Customer PV/SDEA Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DRL</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Bonafide_Fee_s__c</fullName>
        <label>Has Bonafide Fee(s)?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_ACH_Discount_Days__c</fullName>
        <label>Electronic Discount Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_ACH_Net_Days__c</fullName>
        <label>Electronic  Net Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_ACH__c</fullName>
        <label>Electronic  %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Additional_Terms1__c</fullName>
        <label>Additional Terms 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Additional_Terms2__c</fullName>
        <label>Additional Terms 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Additional_Terms3__c</fullName>
        <label>Additional Terms 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Agreement_Name__c</fullName>
        <inlineHelpText>Please input the name of the Agreement (ex. &quot;Sourcing Framework Agreement&quot;, etc.)</inlineHelpText>
        <label>Agreement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Agreement_Term_Length__c</fullName>
        <inlineHelpText>Insert the Initial Term Length of the Agreement</inlineHelpText>
        <label>Initial Term Length</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Any_Specific_Recall_Requ__c</fullName>
        <inlineHelpText>If DRL Standard, list &quot;DRL Standard&quot;</inlineHelpText>
        <label>Specific Recall Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Auto_Renewal__c</fullName>
        <label>Auto Renewal?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Bar_on_Claims_Sunset_ClauseDispu__c</fullName>
        <inlineHelpText>If Agreement has DRL standard Bar on Claims Period, put &quot;DRL Standard&quot;</inlineHelpText>
        <label>Bar on AuditClaims/Sunset Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Batch_Upload_Number__c</fullName>
        <label>Batch Upload Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Chargeback_Policy__c</fullName>
        <inlineHelpText>If DRL Standard Language, put &quot;DRL Standard&quot;</inlineHelpText>
        <label>Chargeback Policy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Check_Payment_Discount_Days__c</fullName>
        <label>Check Payment Discount Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Check_Payment_Net_Days__c</fullName>
        <label>Check Payment Net Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Check_Payment__c</fullName>
        <label>Check Payment %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Competitive_Pricing_MFN1__c</fullName>
        <formula>TEXT(Phoenix_Competitive_Pricing_MFN__c	)</formula>
        <label>Competitive Pricing/MFN Clause</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Competitive_Pricing_MFN__c</fullName>
        <label>Competitive Pricing/MFN Clause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Category__c</fullName>
        <label>Contract Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distribution Service Agreement</fullName>
                </value>
                <value>
                    <fullName>GPO Agreement</fullName>
                </value>
                <value>
                    <fullName>Master Service Agreement</fullName>
                </value>
                <value>
                    <fullName>Product Purchase Agreement</fullName>
                </value>
                <value>
                    <fullName>Short Form Product Purchase Agreement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Term_Expiration_Day__c</fullName>
        <inlineHelpText>Insert the date the Agreement will expire/renew</inlineHelpText>
        <label>Contract Term Expiration Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Term_Expiration_Month__c</fullName>
        <label>Contract Term Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                    <default>true</default>
                    <label>Jan</label>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Contracts_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contracts Assignment</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Terms_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contractual_IOD_Comment1__c</fullName>
        <formula>Phoenix_Contractual_IOD_Comment__c</formula>
        <label>Contractual IOD Comment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contractual_IOD_Comment__c</fullName>
        <label>Contractual IOD Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customary_Practices_Customarily__c</fullName>
        <inlineHelpText>List any major customary practices for this customer not found in agreement (IOD&apos;s, special language/sending requirements, etc.)</inlineHelpText>
        <label>Customary Practices not in AGR</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customary_Practices_not_in_AGR1__c</fullName>
        <label>Customary Practices not in AGR</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_BonafideFee_CONSOLIDATE__c</fullName>
        <inlineHelpText>Please list all Related Fees to this account in this section</inlineHelpText>
        <label>Total Bonafide Fee Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Terms Matrix (Customer Group)</relationshipLabel>
        <relationshipName>Terms_Matrix1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Linked_Contract_Numbers__c</fullName>
        <inlineHelpText>Insert the Vistex Agreement numbers and descriptions tied to this Agreement</inlineHelpText>
        <label>Contract Related Vistex Agreement Number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Main_SoldToHierarchySAP__c</fullName>
        <inlineHelpText>Insert the main Customer or Heirarchy Number tied to this Agreement</inlineHelpText>
        <label>Contract Related Main Sold To/Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Terms Matrix</relationshipLabel>
        <relationshipName>Terms_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Overview__c</fullName>
        <inlineHelpText>Provide a customer overview</inlineHelpText>
        <label>Customer Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Portal_Information__c</fullName>
        <inlineHelpText>(If none put N/A. Insert Name/URL of Portal in field + User with access)</inlineHelpText>
        <label>Customer Portal Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Price_Points__c</fullName>
        <inlineHelpText>If customer does not have contract pricing set up (only buys at wac/services 3rd party), select N/A.</inlineHelpText>
        <label>Customer Vistex Price Points</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>WAC</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Rebate_CONSOLIDATED_Det__c</fullName>
        <inlineHelpText>Please list all Related Rebates to this account in this section</inlineHelpText>
        <label>Total Rebate Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_VS_DRL_Returns_Good_Pol__c</fullName>
        <label>DRL vs Customer Returns Policy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DRL</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_has_FTS_or_Service_Leve__c</fullName>
        <label>Has Failure to Supply Penalties?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_has_membership_list__c</fullName>
        <label>Has Membership Lists?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_s_Agreement_Effective_D__c</fullName>
        <inlineHelpText>Insert the effective date of the related legal agreement</inlineHelpText>
        <label>Agreement Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_s_Main_Division__c</fullName>
        <inlineHelpText>Selection all division&apos;s products covered in agreement</inlineHelpText>
        <label>Contract Product Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RX</fullName>
                </value>
                <value>
                    <fullName>OTC</fullName>
                </value>
                <value>
                    <fullName>SRx</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_s_Purchase_Method__c</fullName>
        <inlineHelpText>If Customer buys at WAC, select Direct (WAC Purchaser)</inlineHelpText>
        <label>Purchase Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct (Contract Price)</fullName>
                </value>
                <value>
                    <fullName>Direct (WAC Purchaser)</fullName>
                </value>
                <value>
                    <fullName>Indirect (Through Auth. Distributor)</fullName>
                </value>
                <value>
                    <fullName>Multiple Purchase Methods</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_s_SAP_Class_of_Trade__c</fullName>
        <inlineHelpText>Select the SAP Class of Trade as per the Net Price Report for this Customer</inlineHelpText>
        <label>SAP Class of Trade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buying Group</fullName>
                </value>
                <value>
                    <fullName>Clinics</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Distributor-Direct</fullName>
                </value>
                <value>
                    <fullName>Federal Supply Schd</fullName>
                </value>
                <value>
                    <fullName>Fed Supply Schd OGA</fullName>
                </value>
                <value>
                    <fullName>GPO - Hospitals</fullName>
                </value>
                <value>
                    <fullName>GPO - Non Hospital</fullName>
                </value>
                <value>
                    <fullName>Home HealthCare</fullName>
                </value>
                <value>
                    <fullName>Home Infusion</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Long Term Care</fullName>
                </value>
                <value>
                    <fullName>Mail Order Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>PharmacyBenefits Mgr</fullName>
                </value>
                <value>
                    <fullName>Repackager</fullName>
                </value>
                <value>
                    <fullName>RetailChain Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Retail Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Speciality Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Staff Model HMO</fullName>
                </value>
                <value>
                    <fullName>Vet Distributor</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_DRL_or_CustomerTemplateAgreement__c</fullName>
        <label>DRL or Customer Template Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DRL</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_DRL_or_Customer_QA_Language_Agre__c</fullName>
        <label>DRL or Customer QA Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DRL</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_DSH_Pricing_Exists__c</fullName>
        <label>DSH Specific Pricing Exists?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Damage_Allowance_Details__c</fullName>
        <inlineHelpText>Please list all Customer Damage Allowances in this section</inlineHelpText>
        <label>Damage Allowance Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Days_Notice_Needed_for_CP_Increa__c</fullName>
        <inlineHelpText>Please input the number of days notice for contract price increases</inlineHelpText>
        <label>Days&apos; Notice - Contr Price Incs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Days_Notice_Needed_for_WAC_Price__c</fullName>
        <label>Days&apos; Notice - WAC Price Incs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Days_Notice_Prod_Discontinuation__c</fullName>
        <inlineHelpText>Please input the number of days notice for product discontinuations</inlineHelpText>
        <label>Days&apos; Notice - Product Discontinuation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Days_Notice_for_Prod_Rem_Disco__c</fullName>
        <inlineHelpText>Please input the number of days notice for product removals</inlineHelpText>
        <label>Days&apos; Notice - Product Removals</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Days_to_Change_Return_Policy__c</fullName>
        <inlineHelpText>If 0, please enter 0</inlineHelpText>
        <label>Days to Change Return Policy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Does_Agreement_allow_direct_ind__c</fullName>
        <label>Allows Contracts w/ Members Directly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Does_Agreement_have_VIP1__c</fullName>
        <formula>TEXT(Phoenix_Does_the_Agreement_have__c)</formula>
        <label>Does Agreement have VIP?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Does_the_Agreement_have__c</fullName>
        <label>Does Agreement have VIP?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_FTS_Bar_on_Claims_Period_If_Any__c</fullName>
        <inlineHelpText>If none exists, leave blank</inlineHelpText>
        <label>FTS Bar on Claims Period</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_FTS_Duration_of_Liability__c</fullName>
        <inlineHelpText>Please list the duration of liability for FTS claims</inlineHelpText>
        <label>FTS Duration of Liability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_FTS_SL_Brand_Eligible__c</fullName>
        <inlineHelpText>Please list if brand products are eligible for FTS on this agreement</inlineHelpText>
        <label>FTS Brand Eligibility?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_FTS_SL_Calculation_Language__c</fullName>
        <inlineHelpText>Please list out the FTS Penalty Language/Details</inlineHelpText>
        <label>FTS Language Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_FTS_SL_Price_Cap__c</fullName>
        <inlineHelpText>Please list any caps to FTS maximum price/maximum credit</inlineHelpText>
        <label>FTS Price Cap</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_FTS_SL_Threshold_Above_Normal_Us__c</fullName>
        <description>FTS/SL Percentage Threshold Above Normal Usage</description>
        <inlineHelpText>Please list any threshold requirements over normal usage amounts</inlineHelpText>
        <label>FTS % Threshold Above Normal Usage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Full_QA_or_Section_in_Agreement__c</fullName>
        <label>QA Language/Agr for Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Separate QA Agreement</fullName>
                </value>
                <value>
                    <fullName>QA Language in Agreement</fullName>
                </value>
                <value>
                    <fullName>No QA Language</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Full_SDEA_or_Section_in_Agreemen__c</fullName>
        <label>PV/SDEA Language/Agr for Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Separate SDEA</fullName>
                </value>
                <value>
                    <fullName>PV/SDEA Language in Agreement</fullName>
                </value>
                <value>
                    <fullName>No PV/SDEA Language</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Has_Bonafide_Fee_s1__c</fullName>
        <formula>TEXT(Has_Bonafide_Fee_s__c)</formula>
        <label>Has Bonafide Fee(s)?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Has_Damage_Allowance__c</fullName>
        <label>Has Damage Allowance?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Has_Failure_to_Supply_Penalties__c</fullName>
        <formula>TEXT(Phoenix_Customer_has_FTS_or_Service_Leve__c)</formula>
        <label>Has Failure to Supply Penalties?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Has_Rebates1__c</fullName>
        <description>used this field to show in key terms</description>
        <formula>TEXT(Phoenix_Has_Rebates__c)</formula>
        <label>Has Rebates?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Has_Rebates__c</fullName>
        <label>Has Rebates?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Has_Service_Level_Penalties1__c</fullName>
        <formula>TEXT(Phoenix_Has_Service_Level_Penalties__c)</formula>
        <label>Has Service Level Penalties?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Has_Service_Level_Penalties__c</fullName>
        <label>Has Service Level Penalties?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_How_to_Obtain_Membership_Lists__c</fullName>
        <inlineHelpText>Please list how to obtain membership listing, or if received by email</inlineHelpText>
        <label>How to Obtain Membership Lists</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_IOD_Language_In_Purchase_Agr1__c</fullName>
        <formula>TEXT(Phoenix_IOD_Language_In_Purchase_Agreeme__c)</formula>
        <label>Contractually Obligated IOD&apos;s in AGR?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_IOD_Language_In_Purchase_Agreeme__c</fullName>
        <inlineHelpText>If the Agreement has language obligating stocking/initial order discounts, select &quot;Yes&quot;</inlineHelpText>
        <label>Contractually Obligated IOD&apos;s in AGR?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Customer_Indirect_GPO__c</fullName>
        <label>Is Customer Health System GPO?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Customer_Prepay__c</fullName>
        <label>Is Customer Prepay?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Last_Update_Notes__c</fullName>
        <inlineHelpText>List any major update notes during this round of updating</inlineHelpText>
        <label>Last Update Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>